# dioxus-cargo-workspaces

./: .gitignore  Cargo.toml  Readme.md
development/: Cargo.toml  Dioxus.toml
development/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs
web/: Cargo.toml
web/src/: lib.rs
